# ChangeLog for dev-vcs/gitolite
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-vcs/gitolite/ChangeLog,v 1.23 2012/08/26 13:00:38 idl0r Exp $

*gitolite-3.04 (26 Aug 2012)

  26 Aug 2012; Christian Ruppert <idl0r@gentoo.org> +gitolite-3.04.ebuild:
  Versio bump, bug 423995. Thanks to Manuel Rüger (mrueg) <gentoo@rueg.eu>.

  05 Jul 2012; Agostino Sarubbo <ago@gentoo.org> gitolite-2.3.1.ebuild:
  Stable for amd64, wrt bug #422077

  04 Jul 2012; Johannes Huber <johu@gentoo.org> gitolite-2.3.1.ebuild:
  Stable for x86, wrt bug #422077

  07 Jun 2012; Zac Medico <zmedico@gentoo.org> gitolite-2.1.0.ebuild,
  gitolite-2.2.ebuild, gitolite-2.3.1.ebuild, gitolite-2.3.ebuild,
  gitolite-3.03.ebuild:
  inherit user for enewgroup and enewuser

*gitolite-3.03 (23 May 2012)

  23 May 2012; Christian Ruppert <idl0r@gentoo.org> -gitolite-3.02.ebuild,
  +gitolite-3.03.ebuild:
  Version bump

  22 May 2012; Jeff Horelick <jdhore@gentoo.org> gitolite-2.3.ebuild:
  marked x86 per bug 416569

*gitolite-3.02 (20 May 2012)

  20 May 2012; Christian Ruppert <idl0r@gentoo.org> +gitolite-3.02.ebuild,
  metadata.xml:
  Version bump to 3.x, bug 413335

  19 May 2012; Agostino Sarubbo <ago@gentoo.org> gitolite-2.3.ebuild:
  Stable for amd64, wrt bug #416569

*gitolite-2.3.1 (18 May 2012)

  18 May 2012; Christian Ruppert <idl0r@gentoo.org> gitolite-2.3.ebuild,
  +gitolite-2.3.1.ebuild:
  Version bump, bug 413335

*gitolite-2.3 (15 Feb 2012)

  15 Feb 2012; Christian Ruppert <idl0r@gentoo.org> -gitolite-1.5.9.1.ebuild,
  -gitolite-2.0.3-r1.ebuild, +gitolite-2.3.ebuild,
  -files/0001-fix-a-rather-large-typo-thinko-in-1006eba.patch:
  Version bump, bug 403937.

  11 Dec 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> gitolite-2.1.0.ebuild:
  x86 stable wrt bug #393151

  09 Dec 2011; Markos Chandras <hwoarang@gentoo.org> gitolite-2.1.0.ebuild:
  Stable on amd64 wrt bug #393151

*gitolite-2.2 (04 Dec 2011)
