@@ -1,6 +1,9 @@
 # ChangeLog for dev-vcs/gitolite
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-vcs/gitolite/ChangeLog,v 1.23 2012/08/26 13:00:38 idl0r Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-vcs/gitolite/ChangeLog,v 1.24 2012/09/22 15:17:47 idl0r Exp $
+
+  22 Sep 2012; Christian Ruppert <idl0r@gentoo.org> gitolite-3.04.ebuild:
+  Fix upgrade warning when upgrading from 2.x to 3.x, bug 435816.
 
 *gitolite-3.04 (26 Aug 2012)
 
